* hackojo.css: Fix for correct display of tables on Firefox.

--- a/dojo/app/static/css/hackojo.css
+++ b/dojo/app/static/css/hackojo.css
@@ -825,3 +825,7 @@ code {
     border-radius: 7px;
     margin-right: 0.5em;
 }
+
+div.teacher_space {
+    clear : both;
+}
